# C-devel

./: .gitignore  README.md
AES_GCM_ENC_DEC/: Makefile  ReadMe.txt  crypto.c
ASCII_Art_Server/: .gitignore  Makefile  ReadMe.txt
ASCII_Art_Server/client/inc/: main.h
ASCII_Art_Server/client/src/: main.c
ASCII_Art_Server/server/inc/: headerconv.h  main.h
ASCII_Art_Server/server/src/: headerconv.c  main.c
CMake_Setups/C_appl_subfolder_as_lib/: CMakeLists.txt
CMake_Setups/C_appl_subfolder_as_lib/Application/: CMakeLists.txt
CMake_Setups/C_appl_subfolder_as_lib/Application/src/: main.c
CMake_Setups/C_appl_subfolder_as_lib/helper/: CMakeLists.txt
CMake_Setups/C_inc_src/: CMakeLists.txt
CMake_Setups/C_inc_src/include/: helper.h
Distributed_Sensing/: .gitignore  Makefile  ReadMe.txt
HEX_Dump/: ReadMe.txt  main.c
Makefile_Templates/Makefile_advanced/: Makefile
Makefile_Templates/Makefile_gdb/: Makefile
Makefile_Templates/Makefile_release/: Makefile
Makefile_Templates/Makefile_simple/: Makefile  main.c  main.h
Makefile_Templates/shared_lib/: Makefile
Makefile_Templates/static_lib/: Makefile
Natural_Lang_Clock/: ReadMe.txt  convargs.c  convargs.h  genlit.c  genlit.h  main.c  main.h
Pass_Gen/: ReadMe.txt  main.c
Pop_Art_Image_Generator/: ReadMe.txt  checkprogargs.c  checkprogargs.h  main.c  main.h  ppmp6io.c  ppmp6io.h  rgbhandling.c  rgbhandling.h  test.ppm
Uni_Img_Filter/: ReadMe.txt  checkprogargs.c  checkprogargs.h  imageP6_1.ppm  imgfilter.c  imgfilter.h  main.c  main.h  ppmp6io.c  ppmp6io.h  test.ppm
(+21 files in other folders)
